--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WoodwaysFrontend",
+  "name": "nuxt-app",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,10 +11,10 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "nuxt": "^3.7.0",
     "@nuxtjs/strapi": "^1.9.3",
     "@types/node": "^18.17.0",
     "markdown-it": "^13.0.1",
-    "nuxt": "^3.7.3",
     "sass": "^1.64.2",
     "vue-tsc": "^1.8.8"
   }
