--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     },
     "devDependencies": {
         "concurrently": "^8.2.1"
+    },
+    "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.4.2"
     }
 }
