--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-i18n": "4.13.6",
     "@strapi/plugin-users-permissions": "4.13.6",
     "@strapi/strapi": "4.13.6",
+    "@webbio/strapi-plugin-scheduler": "^1.0.6",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1"
   },
