--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.7.0",
     "nuxt-mapbox": "^1.4.4",
     "sass": "^1.64.2",
-    "vue-tsc": "^1.8.8"
+    "vue-tsc": "^1.8.8",
+    "@vueuse/motion": "^2.0.0"
   }
 }
