--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "woodways.ms",
   "private": true,
   "type": "commonjs",
   "scripts": {
@@ -13,12 +13,14 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/strapi": "^1.9.3",
     "@types/node": "^18.17.0",
+    "@vueuse/motion": "^2.0.0",
     "mapbox-gl": "^2.15.0",
     "markdown-it": "^13.0.1",
     "nuxt": "^3.7.0",
     "nuxt-mapbox": "^1.4.4",
+    "nuxt-simple-robots": "^3.1.9",
+    "nuxt-simple-sitemap": "^4.1.0",
     "sass": "^1.64.2",
-    "vue-tsc": "^1.8.8",
-    "@vueuse/motion": "^2.0.0"
+    "vue-tsc": "^1.8.8"
   }
 }
